# explore_dynamic_import

./: LICENSE  README.md
main_application/: main.py  main1.py  main2.py
subapplications/subapp1/: pyproject.toml
subapplications/subapp1/src/subapp1/: different_stuff.py
subapplications/subapp1/src/subapp1/go_deeper/: dependency.py  samesame.py
subapplications/subapp2/: pyproject.toml
subapplications/subapp2/src/subapp2/: different2.py
subapplications/subapp2/src/subapp2/go_deeper/: dependency.py  samesame.py
