[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["subapp1"]
namespaces = true

[project]
name = "subapp1"
version = "1.0.0"
description = "Test Namespace"
license = { text = "No Agreement" }